--- a/composer.json
+++ b/composer.json
@@ -10,17 +10,17 @@
         }
     ],
     "require": {
-        "php": ">=7.3",
+        "php": ">=8.1",
         "ext-json": "*",
         "ext-swoole": ">=4.5",
-        "hyperf/cache": "^2.2",
-        "hyperf/context": "^2.2",
-        "hyperf/di": "~2.2.0",
-        "hyperf/event": "^2.2",
-        "hyperf/guzzle": "^2.2",
-        "hyperf/http-server": "^2.2",
-        "hyperf/redis": "^2.2",
-        "hyperf/utils": "^2.2",
+        "hyperf/cache": "~3.1.0",
+        "hyperf/context": "~3.1.0",
+        "hyperf/di": "~3.1.0",
+        "hyperf/event": "~3.1.0",
+        "hyperf/guzzle": "~3.1.0",
+        "hyperf/http-server": "~3.1.0",
+        "hyperf/redis": "~3.1.0",
+        "hyperf/utils": "~3.1.0",
         "nesbot/carbon": "^1.26.3 || ^2.0",
         "ramsey/uuid": "^3.7 || ^4.0",
         "symfony/console": "^5.0 || ^6.0",
@@ -29,7 +29,7 @@
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.0",
-        "phpstan/phpstan": "^0.12",
+        "phpstan/phpstan": "^2.1",
         "swoole/ide-helper": "dev-master"
     },
     "autoload": {
