--- a/composer.json
+++ b/composer.json
@@ -23,9 +23,9 @@
         "hyperf/utils": "~3.1.0",
         "nesbot/carbon": "^1.26.3 || ^2.0",
         "ramsey/uuid": "^3.7 || ^4.0",
-        "symfony/console": "^5.0 || ^6.0",
-        "symfony/http-foundation": "^5.0.7 || ^6.0",
-        "symfony/mime": "^5.0.9 || ^6.0"
+        "symfony/console": "^7.2",
+        "symfony/http-foundation": "^7.2",
+        "symfony/mime": "^7.2"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.0",
