--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "nesbot/carbon": "^1.26.3 || ^2.0",
         "ramsey/uuid": "^3.7 || ^4.0",
         "symfony/console": "^7.2",
-        "symfony/http-foundation": "^7.2",
+        "symfony/http-foundation": "^6.0 | ^7.0",
         "symfony/mime": "^7.2"
     },
     "require-dev": {
